# ImacDream

./: cmake_install.cmake
Game/: CMakeLists.txt  Makefile  README.md
Game/Assets/models/: Hut.mtl  conic_rock.mtl  dragon_egg.mtl  dragon_egg_green.mtl  dragon_egg_red.mtl  green_egg.mtl  green_pine.mtl  menhir.mtl  mushroom.mtl  mushroom_orange.mtl  orange_egg.mtl  rock_circle.mtl  rock_heap.mtl  runejeanne.mtl  singe.mtl  skybox.mtl  solo_rock.mtl  terrain.mtl  water.mtl  yellow_pine.mtl
Game/Assets/shaders/: directionallights.fs.glsl  multiTex3Dex2.fs.glsl  multiText3D.fs.glsl  normals.fs.glsl  pointlight.fs.glsl  tex2D.fs.glsl  tex2D.vs.glsl  text.vs.glsl  water.fs.glsl  water.vs.glsl
Game/Assets/txt/: modelsLoader.txt
Game/class/include/: App.hpp  AssetsManager.hpp  Camera.hpp  FreeflyCamera.hpp  Game.hpp  GameObject.hpp  InteractiveObject.hpp  InteractiveObjectManager.hpp  Light.hpp  MapManager.hpp  Mesh.hpp  Model.hpp  Music.hpp  Program.hpp  Skybox.hpp  StaticImage.hpp  Terrain.hpp  Text.hpp  Time.hpp  TrackballCamera.hpp  Utils.hpp  Water.hpp
Game/class/src/: App.cpp  AssetsManager.cpp  Camera.cpp  Game.cpp  GameObject.cpp  InteractiveObject.cpp  InteractiveObjectManager.cpp  Light.cpp  MapManager.cpp  Mesh.cpp  Model.cpp  Music.cpp  Program.cpp  Skybox.cpp  StaticImage.cpp  Terrain.cpp  Text.cpp  Time.cpp  Utils.cpp  Water.cpp  main.cpp
Game/glimac/: Makefile
Game/glimac/src/: Cone.cpp  FreeflyCamera.cpp  Geometry.cpp  SDLWindowManager.cpp  Shader.cpp  tiny_obj_loader.cpp
Game/lib/glimac/: Makefile  cmake_install.cmake
Game/src/: CMakeLists.txt
(+79 files in other folders)
